--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,22 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+### Altium ###
+# Previews Folders
+**/__Previews/
+
+# History Folders
+**/History/*
+
+# Project Logs
+Project\ Logs*/
+
+# Project Outputs
+Project\ Outputs*/
+
+# Auto-conversion notices
+*.PcbDoc.htm
+
+# Access lock file for dbLib sources
+**/*.ldb
